# image-recognition-app

./: README.md  pyproject.toml  requirements.txt
api/: main.py
cli/: meter_cli.py
src/meter_reader/: __init__.py  digit_detect.py  pipeline.py  recognize_torch.py
training/: train_model.py
ui/: streamlit_app.py
